# turu-py

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/actions/publish-pypi/: action.yml
.github/workflows/: publish-mkdocs.yml  publish-pypi.yml  test-suite.yml
adapters/bigquery/: index.html
adapters/mysql/: index.html
adapters/postgres/: index.html
adapters/snowflake/: index.html
adapters/sqlite3/: index.html
api/turu-bigquery/: index.html
api/turu-core/: index.html
api/turu-mysql/: index.html
api/turu-postgres/: index.html
api/turu-snowflake/: index.html
api/turu-sqlite3/: index.html
docs/: index.md
installation/: index.html
protcol/: index.html
search/: search_index.json
testing/: index.html
turu-bigquery/: README.md  pyproject.toml
turu-core/: README.md  pyproject.toml
turu-core/src/turu/core/: async_connection.py  connection.py  cursor.py
turu-core/src/turu/core/mock/: async_connection.py  async_cursor.py  connection.py  cursor.py
turu-mysql/: README.md  pyproject.toml
turu-mysql/src/turu/mysql/: async_cursor.py  connection.py
turu-postgres/: README.md  pyproject.toml
turu-postgres/src/turu/postgres/: async_connection.py  async_cursor.py  connection.py
turu-snowflake/: README.md  pyproject.toml
turu-snowflake/src/turu/snowflake/: __init__.py  async_cursor.py  cursor.py
turu-snowflake/src/turu/snowflake/record/: async_record_cursor.py  record_cursor.py
turu-snowflake/tests/turu/: test_snowflake.py  test_snowflake_async.py  test_snowflake_mock.py  test_snowflake_mock_async.py
turu-sqlite3/: README.md  pyproject.toml
turu-sqlite3/src/turu/sqlite3/: async_cursor.py  connection.py  cursor.py  mock_cursor.py
