[tool.poetry]
name = "turu-postgres"
version = "0.1.0"
description = "PostgreSQL adapter for turu"
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"
packages = [{ include = "turu", from = "src" }]
repository = "https://github.com/yassun7010/turu-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pyright = "1.1.408"
ruff = "^0.15.11"
pytest = ">=8.2,<9.0"
pydantic = "^2.13.2"
pytest-cov = "^4.1.0"
pytest-asyncio = [
    { version = ">=0.26.0,<1.0.0", python = "<3.10" },
    { version = ">=1.3.0,<2.0.0", python = ">=3.10" },
]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.8.0"
psycopg = "^3.1.16"

[tool.poetry.dependencies.turu-core]
# INFO: poetry-dynamic-versioning to replace this.
path = "../turu-core"
develop = true
# version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = false

[[tool.poetry-dynamic-versioning.substitution.folders]]
path = "."
files = ["pyproject.toml"]
patterns = [
    "path = \"\\.\\./turu-[\\w-]+\"\ndevelop = true\n# (version = \"())0\\.0\\.0",
]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."
typecheck = "pyright src/** tests/**"
test = "pytest --cov=src --cov-report=term --cov-report=xml"
ci = "task format && task lint && task typecheck && task test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
